Closed Bug 991116 Opened 10 years ago Closed 10 years ago

Intermittent test_ping_aboutnetworking.js | application crashed [@ nsXPCWrappedJS::Release()]

Categories

(Core :: Networking, defect)

ARM
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla31
Tracking Status
firefox29 --- unaffected
firefox30 --- unaffected
firefox31 --- fixed
firefox-esr24 --- unaffected

People

(Reporter: emorley, Assigned: valentin)

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file, 1 obsolete file)

Android 2.2 Tegra b2g-inbound opt test xpcshell on 2014-04-02 03:03:14 PDT for push b6575e357b53

slave: tegra-369

https://tbpl.mozilla.org/php/getParsedLog.php?id=37129913&tree=B2g-Inbound

{
TEST-PASS | test_ping_aboutnetworking.js | [run_test/</< : 64] true == true
TEST-INFO | (xpcshell/head.js) | test finished (1)
TEST-INFO | (xpcshell/head.js) | exiting test
TEST-INFO | (xpcshell/head.js) | test pending (1)
System JS : ERROR test_ping_aboutnetworking.js:36 - ReferenceError: serverSocket is not defined
System JS : ERROR test_ping_aboutnetworking.js:36 - ReferenceError: serverSocket is not defined
System JS : ERROR test_ping_aboutnetworking.js:36 - ReferenceError: serverSocket is not defined
System JS : ERROR test_ping_aboutnetworking.js:36 - ReferenceError: serverSocket is not defined
TEST-PASS | test_ping_aboutnetworking.js | [test_sockets/< : 35] 0 != -1
TEST-PASS | test_ping_aboutnetworking.js | [test_sockets/< : 35] 0 != -1
TEST-PASS | test_ping_aboutnetworking.js | [test_sockets/< : 35] 0 != -1
TEST-PASS | test_ping_aboutnetworking.js | [test_sockets/< : 35] 0 != -1
TEST-PASS | (xpcshell/head.js) | 8 (+ 0) check(s) passed
TEST-INFO | (xpcshell/head.js) | 0 check(s) todo
[1]   Segmentation fault      /data/local/xpcb...
\x00
<<<<<<<
getting files in '/mnt/sdcard/tests/xpcshell/minidumps'
PROCESS-CRASH | /builds/tegra-369/test/build/tests/xpcshell/tests/netwerk/test/unit/test_ping_aboutnetworking.js | application crashed [@ nsXPCWrappedJS::Release()]
Crash dump filename: /tmp/tmpizuInJ/46ce5b42-9104-d7fe-71e1ca75-155607e4.dmp
Operating system: Android
                  0.0.0 Linux 2.6.32.9-00002-gd8084dc-dirty #1 SMP PREEMPT Wed Feb 2 11:32:06 PST 2011 armv7l nvidia/harmony/harmony/harmony:2.2/FRF91/20110202.102810:eng/test-keys
CPU: arm
     2 CPUs

Crash reason:  SIGSEGV
Crash address: 0x0

Thread 2 (crashed)
 0  libxul.so!nsXPCWrappedJS::Release() [XPCWrappedJS.cpp:b6575e357b53 : 244 + 0x2]
     r4 = 0x4296e240    r5 = 0x4296d268    r6 = 0x422fcdb4    r7 = 0x422fcde7
     r8 = 0x402023c0    r9 = 0x00000000   r10 = 0x00000000    fp = 0x4021fa00
     sp = 0x422fcd08    lr = 0x802f1025    pc = 0x8285889a
    Found by: given as instruction pointer in context
 1  libxul.so!GrGLEffect::name() const [GrGLEffect.h:b6575e357b53 : 96 + 0x7]
     r4 = 0x4296d26c    r5 = 0x4296d268    r6 = 0x422fcdb4    r7 = 0x422fcde7
     r8 = 0x402023c0    r9 = 0x00000000   r10 = 0x00000000    fp = 0x4021fa00
     sp = 0x422fcd28    pc = 0x822daf73
    Found by: call frame info
 2  libxul.so!mozilla::RefPtr<mozilla::SharedThreadPool>::~RefPtr() + 0xd
     r4 = 0x4296d26c    r5 = 0x4296d268    r6 = 0x422fcdb4    r7 = 0x422fcde7
     r8 = 0x402023c0    r9 = 0x00000000   r10 = 0x00000000    fp = 0x4021fa00
     sp = 0x422fcd30    pc = 0x822a5a3b
    Found by: call frame info
 3  libxul.so!IPC::Principal::~Principal() [nsCOMPtr.h:b6575e357b53 : 487 + 0x3]
     r4 = 0x4296d26c    r5 = 0x4296d268    r6 = 0x422fcdb4    r7 = 0x422fcde7
     r8 = 0x402023c0    r9 = 0x00000000   r10 = 0x00000000    fp = 0x4021fa00
     sp = 0x422fcd38    pc = 0x822a6f99
    Found by: call frame info
 4  libxul.so!mozilla::net::SocketData::~SocketData() [Dashboard.cpp:b6575e357b53 : 41 + 0x3]
     r4 = 0x4296d250    r5 = 0x4296d268    r6 = 0x422fcdb4    r7 = 0x422fcde7
     r8 = 0x402023c0    r9 = 0x00000000   r10 = 0x00000000    fp = 0x4021fa00
     sp = 0x422fcd40    pc = 0x82304433
    Found by: call frame info
 5  libxul.so!mozilla::net::SocketData::~SocketData() [Dashboard.cpp:b6575e357b53 : 41 + 0x3]
     r4 = 0x4296d250    r5 = 0x00000000    r6 = 0x422fcdb4    r7 = 0x422fcde7
     r8 = 0x402023c0    r9 = 0x00000000   r10 = 0x00000000    fp = 0x4021fa00
     sp = 0x422fcd50    pc = 0x82304451
}
Use nsMainThreadPtrHandle<NetDashboardCallback> for JS objects.
Remove pointles code that clears the JS callback.
Fix test using out of scope variable.
Assignee: nobody → valentin.gosu
Status: NEW → ASSIGNED
Attachment #8409247 - Flags: review?(mcmanus)
Comment on attachment 8409247 [details] [diff] [review]
Intermittent test_ping_aboutnetworking.js

Review of attachment 8409247 [details] [diff] [review]:
-----------------------------------------------------------------

add a try run to the bug.. r+
Attachment #8409247 - Flags: review?(mcmanus) → review+
Use nsMainThreadPtrHandle<NetDashboardCallback> for JS objects.
Remove pointles code that clears the JS callback.
Fix test using out of scope variable.
Attachment #8409247 - Attachment is obsolete: true
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/354e438548fb
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: