Bug 991116 - Intermittent test_ping_aboutnetworking.js. r=mcmanus Use nsMainThreadPtrHandle<NetDashboardCallback> for JS objects. Remove pointles code that clears the JS callback. Fix test using out of scope variable.